2008-09-10  Andreia Gaita <avidigal@novell.com> 

	* Widget.cpp, gtkWidget.cpp: Use the widget's destroy event to call the
	  quit routine.
	* gluezilla.cpp: Quit the main loop only instead of the entire app

2008-09-08  Andreia Gaita <avidigal@novell.com> 

	* gluezilla.cpp, gluezilla.h: Return the version of xulrunner that's
	  being used so I can distinguish which cache directory to use

2008-08-29  Andreia Gaita <avidigal@novell.com>

	* BrowserWindow.cpp, Widget.cpp, gluezilla.cpp: Check result codes
	from ns* calls and and bail out if they fail.

	* gluezilla.cpp: Addref document and webnavigation objects before
	returning them to managed land.

2008-08-29  Andreia Gaita <avidigal@novell.com>

	* LocationProvider.cpp: Force dynamic loader to use a specific
	minimum xulrunner version depending on which one it gets built with.

2008-08-07  Andreia Gaita <avidigal@novell.com> 

	* BrowserWindow.cpp: Remove cast macro calls that went walkies on gecko
	  1.9. EOL fixes.
	* windows.mak: Pass in the new defines to the windows build.
	* Widget.cpp: If we're building against gecko 1.9:
	  NS_XPCOMPROXY_CONTRACTID definition has been moved to an
	  unavailable header, define it. AppShell appears to have
	  disappeared, don't call it. Tweak the shutdown call to use the new
	  api.
	* LocationProvider.cpp: Don't call GRE_GetXPCOMPath on gecko 1.9, it
	  was removed. EOL fixes.
	* Makefile.am: Only use gluezilla_* headers if we're building against
	  gecko 1.8
	* interfaces.h: Tweak header include paths depending on which gecko
	  version we're building against. EOL fixes.

2008-06-11  Andreia Gaita <avidigal@novell.com> 

	* BrowserWindow.cpp: Fix missing return

2008-06-10  Andreia Gaita <avidigal@novell.com> 

	* BrowserWindow.cpp, BrowserWindow.h: Disable uri context listener (not
	  being used right now). Add context menu event listener, security
	  change callback.
	* gluezilla.h: Add context menu event and security change callback.